@@ -9,7 +9,36 @@ module.exports = function (fastify, agent, { version, enabled }) {
 
   agent.logger.debug('wrapping fastify build function')
 
-  return semver.gte(version, '2.0.0-rc') ? wrappedBuild2Plus : wrappedBuildPre2
+  if (semver.gte(version, '3.0.0')) {
+    wrappedBuild3Plus.default = wrappedBuild3Plus
+    wrappedBuild3Plus.fastify = wrappedBuild3Plus
+    return wrappedBuild3Plus
+  }
+
+  if (semver.gte(version, '2.0.0-rc')) return wrappedBuild2Plus
+
+  return wrappedBuildPre2
+
+  function wrappedBuild3Plus () {
+    const _fastify = fastify.apply(null, arguments)
+
+    agent.logger.debug('adding onRequest hook to fastify')
+    _fastify.addHook('onRequest', (req, reply, next) => {
+      const method = req.routerMethod || req.raw.method // Fallback for fastify >3 <3.3.0
+      const url = req.routerPath || reply.context.config.url // Fallback for fastify >3 <3.3.0
+      const name = method + ' ' + url
+      agent._instrumentation.setDefaultTransactionName(name)
+      next()
+    })
+
+    agent.logger.debug('adding onError hook to fastify')
+    _fastify.addHook('onError', (req, reply, err, next) => {
+      agent.captureError(err, { request: req.raw })
+      next()
+    })
+
+    return _fastify
+  }
 
   function wrappedBuild2Plus () {
     const _fastify = fastify.apply(null, arguments)
